--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,6 +5,7 @@
 <html lang="en" >
 <head>
   <link rel="stylesheet" href="{% static 'css/output.css' %}">
+  <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
   <!-- AOS Animate On Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
