--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 {% load thumbnail %}
-{% load is_notif %}
 {% load mathfilters %}
+<div class="hidden text-emerald-500"></div>
 
 <div class="navbar bg-base-100 shadow-md">
   <div class="flex-1">
@@ -13,48 +13,29 @@
       <label tabindex="0" class="btn btn-ghost btn-circle">
         <div class="indicator">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-          {# {% if categorized_notifications|is_notif %} #}
+
           {% if all_notifications %}
             <span class="badge badge-xs badge-primary indicator-item"></span>
           {% endif %}
         </div>
       </label>
-      <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow-xl">
+      <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-56 bg-base-100 shadow-xl">
         <div class="card-body">
           {% if all_notifications %}
-            <p class="font-bold text-lg"><span class="badge badge-primary indicator-item">{{all_notifications.count}}</span> notification{{notifs_count|pluralize}}:</p>
+            <p class="font-bold text-lg"><span id="notif-indicator" class="badge badge-primary indicator-item">{{all_notifications.count}}</span> notification{{notifs_count|pluralize}}:</p>
             {% with limit=3 %}
               {% for notification in all_notifications|slice:limit %}
                 {% if notification.content_type.model == 'albumaccess' %}
-                  <a href="{% url 'albums:album_detail' notification.content_object.album.pk %}">
-                    <div class="bg-neutral-content/50 rounded-xl p-2 border border-primary">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="float-left mr-1 w-5 h-5">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.409a2.25 2.25 0 013.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 001.5-1.5V6a1.5 1.5 0 00-1.5-1.5H3.75A1.5 1.5 0 002.25 6v12a1.5 1.5 0 001.5 1.5zm10.5-11.25h.008v.008h-.008V8.25zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
-                        </svg>
-                        <p>{{notification.message|truncatechars:40}}</p>
-                    </div>
-                  </a>
+                  {% include 'partials/notif_albumaccess.html' %}
                 {% elif notification.content_type.model == 'relationrequest' %}
-                  <a href="{% url 'accounts:account_view' notification.content_object.user_sending.pk %}">
-                    <div class="bg-neutral-content/50 rounded-xl p-2 border border-primary">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="float-left mr-1 w-5 h-5">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zM4 19.235v-.11a6.375 6.375 0 0112.75 0v.109A12.318 12.318 0 0110.374 21c-2.331 0-4.512-.645-6.374-1.766z" />
-                      </svg>
-                      <p>{{notification.message|truncatechars:40}}</p>
-                    </div>
+                  {% include 'partials/notif_relationrequest.html' %}
                 {% elif notification.content_type.model == 'comment' %}
-                  <a href="{% url 'photos:photo_detail' notification.content_object.commented_photo.pk %}">
-                    <div class="bg-neutral-content/50 rounded-xl p-2 border border-primary">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="float-left mr-1 w-5 h-5">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 01.778-.332 48.294 48.294 0 005.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
-                      </svg>
-                      <p>{{notification.message|truncatechars:40}}</p>
-                    </div>
+                  {% include 'partials/notif_comment.html' %}
                 {% endif %}
               {% endfor %}
 
               <a class="mt-1 btn btn-sm" href="{% url 'accounts:notifications_view' %}">
-                {% if notifs_count|sub:limit > 0 %}+ {{ notifs_count|sub:limit }} more{% else %}notification panel{% endif %}
+                {% if all_notifications.count|sub:limit > 0 %}+ {{ all_notifications.count|sub:limit }} more{% else %}notification panel{% endif %}
               </a>
             {% endwith %}
           {% else %}
