--- a/albums/templates/albums/album_form.html
+++ b/albums/templates/albums/album_form.html
@@ -23,7 +23,7 @@
           <div class="hidden textarea-bordered"></div> <!-- to add missing tailwind styling-->
           <div class="mt-4">
               <label for="images" class="text-xl font-bold tracking-tight">Upload photos:</label>
-              <input type="file" name="images" multiple class="mt-4 block file-input file-input-bordered file-input-primary w-full max-w-xs">
+              <input type="file" name="images" multiple class="mt-4 block file-input file-input-bordered file-input-primary w-full max-w-xs" required>
               <div class="flex gap-4 mt-8">
                 <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">
                   <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
