--- a/albums/templates/albums/album_access.html
+++ b/albums/templates/albums/album_access.html
@@ -38,7 +38,7 @@
     <section class="my-8 max-w-lg" >
       <a name="access_control"></a>
       <div class="flex gap-4 prose">
-        <h2>Control who can access your album</h2>
+        <h2>Control your album privacy</h2>
         <svg class="w-8 h-8 stroke-current stroke-2 fill-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
         </svg>
@@ -78,12 +78,12 @@
                               <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation.first_name user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
                             {% endthumbnail %}
                           {% else %}
-                            <img src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof user.get_full_name user.email %}" alt="">
+                            <img src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof user.get_full_name user.email %}" width="50" height="50" alt="" class="h-full w-full object-cover object-center group-hover:opacity-75">
                           {% endif %}
                         </div>
                       </div>
                       <div>
-                        <div class="font-bold">{{relation.first_name}} {{relation.last_name}}</div>
+                        <div class="font-bold">{% firstof relation.get_full_name relation.email %}</div>
                         <div class="text-sm opacity-50">{{relation.email|truncatechars:12}}</div>
                       </div>
                     </div>
@@ -140,12 +140,17 @@
                     <div class="flex items-center space-x-3">
                       <div class="avatar">
                         <div class="mask mask-squircle w-12 h-12">
-                          {% thumbnail relation.profile_picture "50x50" crop="center" as im %}
-                          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation.first_name user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
-                          {% endthumbnail %}                        </div>
+                          {% if relation.profile_picture %}
+                            {% thumbnail relation.profile_picture.url "50x50" crop="center" as im %}
+                            <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{% firstof relation.first_name user.email %}'s profile pic" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                            {% endthumbnail %}
+                          {% else %}
+                            <img src="https://api.dicebear.com/6.x/initials/svg?seed={% firstof user.get_full_name user.email %}" width="50" height="50" alt="" class="h-full w-full object-cover object-center group-hover:opacity-75">
+                          {% endif %}
+                        </div>
                       </div>
                       <div>
-                        <div class="font-bold">{{relation.first_name}} {{relation.last_name}}</div>
+                        <div class="font-bold">{% firstof relation.get_full_name relation.email %}</div>
                         <div class="text-sm opacity-50">{{relation.email|truncatechars:12}}</div>
                       </div>
                     </div>
