--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-
+{% load static %}
 {% block title %}Login{% endblock title %}
 
 {% block body %}
@@ -82,6 +82,9 @@
   </div>
 </section>
 
+{% block javascript %}
+  <script src="{% static 'accounts/js/hide_pw.js' %}"></script>
+{% endblock javascript %}
 
 
 {% endblock body %}
