--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -14,7 +14,7 @@
 <section class="bg-base-100">
   <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
     <section
-      class="relative flex h-32 items-end bg-base-100 lg:col-span-5 lg:h-full xl:col-span-6"
+      class="relative flex h-40 items-end bg-base-100 lg:col-span-5 lg:h-full xl:col-span-6"
     >
       <img
         alt="Cover Photo"
@@ -23,19 +23,18 @@
         class="absolute inset-0 h-full w-full object-cover opacity-80"
       />
 
-      <div class="hidden lg:relative lg:block lg:p-12">
-        <a class="block text-white text-6xl" href="/">
+      <div class="hidden text-white lg:relative lg:block lg:p-12">
+        <a class="block text-6xl" href="/">
           <span class="sr-only">Home</span>
           æ
         </a>
 
-        <h2 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">
+        <h2 class="mt-6 text-2xl font-bold sm:text-3xl md:text-4xl">
           Welcome to Æternam
         </h2>
 
-        <p class="mt-4 leading-relaxed text-white/90">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam
-          dolorum aliquam, quibusdam aperiam voluptatum.
+        <p class="mt-4 leading-relaxed font-semibold">
+          This website is designed for families, where you can comment on and share your memories of albums that have been put away for too long, and which deserve to spread smiles and happiness
         </p>
       </div>
     </section>
@@ -44,29 +43,7 @@
       class="flex items-center justify-center px-8 py-8 sm:px-12 lg:col-span-7 lg:px-16 lg:py-12 xl:col-span-6"
     >
       <div class="max-w-xl lg:max-w-3xl">
-        <div class="relative -mt-16 block lg:hidden">
-          <a
-            class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-white text-blue-600 sm:h-20 sm:w-20"
-            href="/"
-          >
-            <span class="sr-only">Home</span>
-            <svg
-                class="h-8 sm:h-10"
-                viewBox="0 0 28 24"
-                fill="none">
-                  <text
-                    x="50"
-                    y="209.25"
-                    style="font-size:275px;font-family:Century Schoolbook L"
-                    xml:space="preserve">
-                    <tspan
-                      x="50"
-                      y="209.25"
-                      style="font-style:normal">æ</tspan>
-                  </text>
-              </svg>
-          </a>
-
+        <div class="relative block lg:hidden">
           <h1
             class="mt-2 text-2xl font-bold sm:text-3xl md:text-4xl"
           >
@@ -74,13 +51,12 @@
           </h1>
 
           <p class="mt-4 leading-relaxed text-gray-500">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            nam dolorum aliquam, quibusdam aperiam voluptatum.
+            This website is designed for families, where you can comment on and share your memories of albums that have been put away for too long, and which deserve to spread smiles and happiness
           </p>
         </div>
 
         <form class="mt-8 grid grid-cols-6 gap-6" method="POST">
-        {% csrf_token %}
+          {% csrf_token %}
           <div class="col-span-6 sm:col-span-3">
             <label
               for="FirstName"
