--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -37,7 +37,7 @@
         <div class="relative">
 
           <!-- {{form.email}} -->
-          <input type="text" name="email" value="hadi@example.com" class="mt-1 w-full input input-bordered shadow-sm" placeholder="Email" required="" id="id_email">
+          <input type="text" name="email" class="mt-1 w-full input input-bordered shadow-sm" placeholder="Email" required="" id="id_email">
 
           <span class="absolute inset-y-0 end-0 grid place-content-center px-4">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
