--- a/accounts/templates/partials/account_connections_searchbar.html
+++ b/accounts/templates/partials/account_connections_searchbar.html
@@ -1,42 +1,22 @@
 <div class="my-10">
-  <h2 class="text-xl font-semibold">Look for family members or friends:</h2>
-  <form method="GET" class="flex flex-wrap gap-2">
-    <input type="text" class="input input-bordered w-full" name="search-area" placeholder="Type to find users" value={{search_input}}>
-    <input type="submit" class="btn btn-default w-full" value="Search"></input>
+  <div class="p-2 inline-flex gap-4 items-center ">
+    <svg class="max-sm:mb-2 w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 45.902 45.902" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M43.162,26.681c-1.564-1.578-3.631-2.539-5.825-2.742c1.894-1.704,3.089-4.164,3.089-6.912 c0-5.141-4.166-9.307-9.308-9.307c-4.911,0-8.932,3.804-9.281,8.625c4.369,1.89,7.435,6.244,7.435,11.299 c0,1.846-0.42,3.65-1.201,5.287c1.125,0.588,2.162,1.348,3.066,2.26c2.318,2.334,3.635,5.561,3.61,8.851l-0.002,0.067 l-0.002,0.057l-0.082,1.557h11.149l0.092-12.33C45.921,30.878,44.936,28.466,43.162,26.681z"></path> <path d="M23.184,34.558c1.893-1.703,3.092-4.164,3.092-6.912c0-5.142-4.168-9.309-9.309-9.309c-5.142,0-9.309,4.167-9.309,9.309 c0,2.743,1.194,5.202,3.084,6.906c-4.84,0.375-8.663,4.383-8.698,9.318l-0.092,1.853h14.153h15.553l0.092-1.714 c0.018-2.514-0.968-4.926-2.741-6.711C27.443,35.719,25.377,34.761,23.184,34.558z"></path> <path d="M6.004,11.374v3.458c0,1.432,1.164,2.595,2.597,2.595c1.435,0,2.597-1.163,2.597-2.595v-3.458h3.454 c1.433,0,2.596-1.164,2.596-2.597c0-1.432-1.163-2.596-2.596-2.596h-3.454V2.774c0-1.433-1.162-2.595-2.597-2.595 c-1.433,0-2.597,1.162-2.597,2.595V6.18H2.596C1.161,6.18,0,7.344,0,8.776c0,1.433,1.161,2.597,2.596,2.597H6.004z"></path> </g> </g> </g></svg>
+    <h2 class="text-xl font-semibold">Look for family members and friends:</h2>
+  </div>
+  <form>
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+        <svg id="search-icon" class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+        </svg>
+      </div>
+      <input id="user-input" type="text" class="block p-4 pl-10 text-sm input input-bordered w-full" name="search-area" placeholder="Type to find users" {#value={{search_input}}#}>
+    </div>
+    <!-- <input type="submit" class="btn btn-default w-full" value="Search"></input> -->
   </form>
-</div>
+
 <!-- SEARCH RESULTS -->
-{% if search_input and searched_users %}
-<div class="overflow-x-auto">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>User</th>
-      </tr>
-    </thead>
-    {% for searched_user in searched_users %}
-      {% if searched_user not in relations_users %}
-      <tbody>
-        <tr class="hover">
-          <th>
-            <a href="{% url 'accounts:account_view' searched_user.id %}" class="cursor-pointer">
-              <div class="flex items-center space-x-3">
-                <div class="avatar">
-                  <div class="mask mask-squircle w-12 h-12">
-                    <img src="{% if searched_user.profile_picture %}{{searched_user.profile_picture.url}}{% else %}https://api.dicebear.com/6.x/initials/svg?seed={% firstof searched_user.get_full_name searched_user.email %}{% endif %}" alt="Avatar Tailwind CSS Component" />
-                  </div>
-                </div>
-                <div>
-                  <div class="font-bold">{% firstof searched_user.get_full_name "-" %}</div>
-                  <div class="text-sm opacity-50">{{searched_user.email}}</div>
-                </div>
-              </div>
-            </a>
-          </th>
-        </tr>
-      </tbody>
-      {% endif %}
-    {% endfor %}
-  </table>
+<div id="replaceable-content">
+  {% include 'partials/searchbar_results.html' %}
 </div>
-{% endif %}
+</div>
