--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -48,16 +48,13 @@
 </body>
 
   <!-- Theme change script (https://github.com/saadeghi/theme-change) -->
-  {% block javascript %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
   <!-- Alpine js scripts -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-
+  <!-- custom js script -->
   <script src="{% static 'js/script.js' %}"></script>
-
   <!-- AOS for notifications panel-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-
   <script>AOS.init();</script>
+  {% block javascript %}{% endblock %}
 </html>
