fixed searchbar script error

--- a/accounts/templates/partials/account_connections_searchbar.html
+++ b/accounts/templates/partials/account_connections_searchbar.html
@@ -10,7 +10,7 @@
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
         </svg>
       </div>
-      <input id="user-input" type="text" class="block p-4 pl-10 text-sm input input-bordered w-full" name="search-area" placeholder="Type to find users" {#value={{search_input}}#}>
+      <input id="user-input" type="text" class="block p-4 pl-10 text-sm input input-bordered w-full" name="search-area" placeholder="Type to find users">
     </div>
     <!-- <input type="submit" class="btn btn-default w-full" value="Search"></input> -->
   </form>
