--- a/core/templates/partials/navbar.html
+++ b/core/templates/partials/navbar.html
@@ -1,5 +1,7 @@
 {% load thumbnail %}
 {% load mathfilters %}
+{% load get_notif_name %}
+
 <div class="hidden text-emerald-500"></div>
 
 <div class="navbar bg-base-100 shadow-md">
@@ -9,43 +11,91 @@
   {% if request.user.is_authenticated %}
   <div class="flex-none">
     {# notifications #}
-    <div class="dropdown dropdown-end">
-      <label tabindex="0" class="btn btn-ghost btn-circle">
-        <div class="indicator">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
+    <div x-data="{
+            slideOverOpen: true
+            }" class="relative z-50 w-auto h-auto">
+        <button @click="slideOverOpen=true"
+         class="btn btn-ghost btn-circle">
+          <div class="indicator">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
 
-          {% if all_notifications %}
-            <span class="badge badge-xs badge-primary indicator-item"></span>
-          {% endif %}
+            {% if all_notifications %}
+              <span class="badge badge-xs badge-primary indicator-item"></span>
+            {% endif %}
+          </div>
+        </button>
+      <template x-teleport="body">
+        <div x-show="slideOverOpen" @keydown.window.escape="slideOverOpen=false" class="relative z-[99]">
+          <div x-show="slideOverOpen" x-transition.opacity.duration.600ms @click="slideOverOpen = false"
+            class="fixed inset-0 bg-black bg-opacity-20"></div>
+          <div class="fixed inset-0 overflow-hidden">
+            <div class="absolute inset-0 overflow-hidden">
+              <div class="fixed inset-y-0 right-0 flex max-w-full pl-10">
+                <div x-show="slideOverOpen" @click.away="slideOverOpen = false"
+                  x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700"
+                  x-transition:enter-start="translate-x-full" x-transition:enter-end="translate-x-0"
+                  x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700"
+                  x-transition:leave-start="translate-x-0" x-transition:leave-end="translate-x-full"
+                  class="w-screen max-w-md">
+                  <div
+                    class="flex flex-col h-full py-5 overflow-y-scroll bg-base-100 border-l shadow-lg border-neutral-100/70">
+                    <div class="px-4 sm:px-5">
+                      <div class="flex items-start justify-between pb-1">
+                        <h2 class="text-base font-semibold leading-6 " id="slide-over-title">Notification Panel
+                        </h2>
+                        <div class="flex items-center h-auto ml-3">
+                          <button @click="slideOverOpen=false"
+                            class="absolute top-0 right-0 z-30 flex items-center justify-center px-3 py-2 mt-4 mr-5 space-x-1 text-xs font-medium uppercase border rounded-md border-neutral-200 hover:bg-neutral-100">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                              stroke="currentColor" class="w-4 h-4">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                            </svg>
+                            <span>Close</span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="relative flex-1 px-4 mt-5 sm:px-5">
+                      <div class="absolute inset-0 px-4 sm:px-5">
+                        <div class="relative h-full overflow-hidden border border-dashed rounded-md border-neutral-300">
+                          {% if all_notifications %}
+                            <h2 class="font-semibold text-lg my-3 px-4 py-2 rounded-full bg-base-300 w-fit mx-auto">{{all_notifications.count}} notification{{all_notifications.count|pluralize}}:</h2>
+                          {% endif %}
+                          {% for notification in all_notifications %}
+                          <div id="notif" data-notification-id="{{ notification.id }}" class="relative bg-base-100 w-full border-b pl-4 pr-8 py-4 md:py-6 hover:bg-base-300 {% if forloop.last %}shadow-xl rounded-b-lg{% else %}border-b{% endif %}">
+                            <a href="#" class=" flex gap-4">
+                              <div class="flex-none self-center">
+                                <img class="rounded-full w-12 h-12" src="{% if notification.user_from.profile_picture %}{{notification.user_from.profile_picture}}{% else %}https://api.dicebear.com/6.x/initials/svg?seed={% firstof notification.user_from.get_full_name notification.user_from.email %}{% endif %}" alt="">
+                              </div>
+                              <div>
+                                <h2 class="text-xl font-semibold">{{notification.content_type|get_notif_name|title}}</h2>
+                                <p class="pr-2">{{notification.message}}</p>
+                              </div>
+                            </a>
+                            <div class="absolute right-0 mr-3 top-12 delete-notif-pair group">
+                              <button class="delete-notif" >
+                                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" class="w-8 h-8 p-1 rounded-full stroke-current group-hover:stroke-white group-hover:stroke-2 group-hover:bg-gray-400">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                                  </svg>
+                              </button>
+                              <button class="hidden confirm-delete-notif">
+                                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 p-1 rounded-full stroke-current group-hover:stroke-white group-hover:stroke-2 group-hover:bg-gray-400">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                                  </svg>
+                              </button>
+                            </div>
+                          </div>
+                          {% endfor %}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </label>
-      <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-56 bg-base-100 shadow-xl">
-        <div class="card-body">
-          {% if all_notifications %}
-            <p class="font-bold text-lg"><span id="notif-indicator" class="badge badge-primary indicator-item">{{all_notifications.count}}</span> notification{{notifs_count|pluralize}}:</p>
-            {% with limit=3 %}
-              {% for notification in all_notifications|slice:limit %}
-                {% if notification.content_type.model == 'albumaccess' %}
-                  {% include 'partials/notif_albumaccess.html' %}
-                {% elif notification.content_type.model == 'relationrequest' %}
-                  {% include 'partials/notif_relationrequest.html' %}
-                {% elif notification.content_type.model == 'comment' %}
-                  {% include 'partials/notif_comment.html' %}
-                {% endif %}
-              {% endfor %}
-
-              <a class="mt-1 btn btn-sm" href="{% url 'accounts:notifications_view' %}">
-                {% if all_notifications.count|sub:limit > 0 %}+ {{ all_notifications.count|sub:limit }} more{% else %}notification panel{% endif %}
-              </a>
-            {% endwith %}
-          {% else %}
-            <span class="font-bold text-lg">No notifications</span>
-            <a class="mt-1 btn btn-xs" href="{% url 'accounts:notifications_view' %}">
-              notification panel
-            </a>
-          {% endif %}
-        </div>
-      </div>
+      </template>
     </div>
     {# Menu #}
     <div class="dropdown dropdown-end px-2 py-1">
